home, login, signup components added

--- a/src/index.css
+++ b/src/index.css
@@ -4,4 +4,10 @@
   font-family: 'Nunito', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  text-align: center;
+  box-sizing: border-box;
+}
+
+.spacer {
+  flex: 1;
 }
