--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,5 +1,6 @@
 .home-top-section {
-  background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('/basketball.jpeg') 100% 100%/cover no-repeat;
+  background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)),
+  url('/basketball.jpeg') 100% 100%/cover no-repeat;
   height: 100vh;
 }
 
@@ -83,7 +84,8 @@
 
 .everywhere {
   height: 10rem;
-  background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('/street.jpeg') 50% 50%/cover no-repeat;
+  background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)),
+  url('/street.jpeg') 50% 50%/cover no-repeat;
   padding: 1rem 0;
   color: white;
 }
